--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/jmpTeixeira02/WeebDex.git"
   },
+  "type": "module",
   "author": "",
   "license": "ISC",
   "bugs": {
